[gd_scene load_steps=3 format=3 uid="uid://rohwjlxdmef2"]

[ext_resource type="Script" path="res://scripts/projectile.gd" id="1_bxkdx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u0idv"]
size = Vector2(30, 30)

[node name="Projectile" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_bxkdx")

[node name="BulletBase" type="AnimatedSprite2D" parent="."]
scale = Vector2(5, 5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_u0idv")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
visible = false
scale = Vector2(1.5, 1.5)

[node name="LifespanTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="LifespanTimer" to="." method="_on_lifespan_timer_timeout"]
